# requirements-advisor-client

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_PLAN_UI_ENHANCEMENTS.md  README.md  docker-compose.yml  production-mcp-client-web-application-implementation-guide.md  pyproject.toml  railway.toml
.devcontainer/: devcontainer.json
src/requirements_advisor_client/: __init__.py
src/requirements_advisor_client/backend/: __init__.py  config.py  database.py  guardrails.py  llm.py  logging.py  main.py  mcp_client.py  models.py
src/requirements_advisor_client/frontend/: __init__.py  app.py  config.py  styles.py
src/requirements_advisor_client/frontend/.streamlit/: config.toml
tests/: __init__.py  conftest.py
tests/backend/: __init__.py  test_config.py  test_database.py  test_guardrails.py  test_llm.py  test_main.py  test_mcp_client.py
tests/frontend/: __init__.py  test_app.py
